--- a/css/style.css
+++ b/css/style.css
@@ -11608,7 +11608,7 @@ section.videos {
   position: relative;
   width: 80px;
   height: 80px;
-  border: 1px solid rgba(0, 0, 0, 0.05);
+  /* border: 1px solid rgba(0, 0, 0, 0.05); */
   margin: 0 auto;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -12009,7 +12009,7 @@ textarea.form-control {
 }
 .services.ftco-animate.box .media .icon {
   margin-top: 10px;
-  border: 1px solid white;
+  /* border: 1px solid white; */
 }
 .services.ftco-animate.box .media .icon span {
   border-color: white;
